# about-cmake

./: CMakeInitialCache.txt  CMakeLists.txt  CMakePresets.json  README.md  makefile
CMakeUtility/: AboutCMakeConfig.in  AboutCMakeConfigBuild.in  configure.h.in  install-start.cmake
about_cmake/: CMakeLists.txt
about_cmake/CMakeUtils/: CMakeInitialCache.txt  Config.cmake.in  ConfigBuild.cmake.in  install-start.cmake
about_cmake/check_symbol/: CMakeLists.txt  main.cpp  try_compile_has_pow.cpp
about_cmake/configure_file/: CMakeLists.txt  configure.h.in  main.cpp
about_cmake/custom_target/: CMakeLists.txt
about_cmake/include/: sum.h
about_cmake/language/: CMakeLists.txt
about_cmake/lib/sum/: CMakeLists.txt  sum.cpp
dependencies/add_library_imported/: CMakeLists.txt  main.cpp
dependencies/find_package/: CMakeLists.txt
find-package/: CMakeLists.txt  CMakePresets.json  main.cpp
include/sum/: sum.h
src/: CMakeLists.txt
src/language/: CMakeLists.txt
src/lib/sum/: CMakeLists.txt  sum.cpp
